--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 Este es un repositorio para el material del curso Ecuaciones diferenciales 2.
 -Estos materiales  son para uso académico  y del curso.
 -Las notas por estos trabajos será revelada a grupo y no publicada en este repositorio.
--Al estudiar tenga en cuenta que las tareas pueden contener errores, fueron realizadas por alumnos.
+-al estudiar tenga en cuenta que las tareas pueden contener errores, fueron realizadas por alumnos.
+
+ACTUALIZACIÓN 17 OCTUBE/2017
+
+-Se añaden las tareas que van llegando para que puedan estudiar para el certamen.
+-Tengan en  cuenta nuevamente que son tareas, pueden tener errores.
+
 S.M.
